<resources>
    <!-- String app name -->
    <string name="app_name">Pistache Végane</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Side menu string -->
    <string name="menu_item_myreceipes">MES RECETTES</string>
    <string name="menu_item_favoris">FAVORIS</string>
    <string name="menu_item_receipesbyingredients">RECETTES PAR INGREDIENTS</string>
    <string name="menu_item_alternativesvegans">ALTERNATIVES VÉGANES</string>
    <string name="menu_item_veganornot">VEGAN OU NON</string>
    <string name="menu_item_parameters">PARAMÈTRES</string>

    <!-- parameter activity strings -->
    <string name="parameters_title_whoweare">Qui sommes nous?</string>
    <string name="parameters_title_contactus">Nous contacter</string>
    <string name="parameters_title_licenceandthanks">Licences et remerciements</string>
    <string name="parameters_label_whoweare">Nous sommes vegan et fières de l\'être</string>
    <string name="parameters_label_contactus">0123456789</string>
    <string name="parameters_label_licenceandthanks1">Nous acceptons de manger des cailloux pour le restant de nos jours.</string>
    <string name="parameters_label_licenceandthanks2">Merci à mon ami pipboy d\'avoir fait cette super appli.</string>

    <!-- my recipes activity strings -->
    <string name="myrecipes_hint_searchbar">Rechercher</string>
    <string name="title_presentation">Présentation</string>
    <string name="title_tab_ingredients">Ingrédients</string>
    <string name="title_tab_realisation">Réalisation</string>

    <!-- my recipes activity strings -->
    <string name="veganproduct_source_animal">Animal</string>
    <string name="veganproduct_source_vegan">Vegan</string>
</resources>
