<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_myreceipes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_myreceipes" />
        <item
            android:id="@+id/menu_item_favoris"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_favoris" />
        <item
            android:id="@+id/menu_item_receipesbyingredients"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_receipesbyingredients" />
        <item
            android:id="@+id/menu_item_alternativesvegans"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_alternativesvegans" />
        <item
            android:id="@+id/menu_item_veganornot"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_veganornot" />
        <item
            android:id="@+id/menu_item_parameters"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_item_parameters" />
    </group>
</menu>
