<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.pistachevegane.com.RecipeDetailActivity">
    <RelativeLayout
        android:id="@+id/content_detailrecipe"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipeDetailsImageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/header_recette_placeholder"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorTransparent">
                <ImageView
                    android:id="@+id/recipeDetailsBack"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center|start"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/img_bt_back"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/recipeDetailsLikeButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/img_bt_like"/>
                    <ImageView
                        android:id="@+id/recipeDetailsShareButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/img_bt_share"
                        />
                </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="-30dp"
            android:layout_gravity="center_horizontal|end"
            android:layout_below="@id/recipeDetailsImageHeader">
            <LinearLayout
                android:id="@+id/recipeDetailsTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorReceipeTitle"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_title_left"/>
                <TextView
                    android:id="@+id/detailTitleRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:textColor="@color/colorText"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/recipeDetailsDescriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/recipeDetailsImageHeader"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:textSize="20sp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorText"
                    android:text="@string/title_presentation"/>
                <ImageView
                    android:id="@+id/recipeDetailsMorePictures"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|end"
                    android:src="@drawable/img_ic_photos"/>
            </LinearLayout>
            <TextView
                android:id="@+id/recipeDetailsDescriptionRecipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="I'm a super duper text description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_below="@id/recipeDetailsDescriptionContainer">
            <TextView
                android:id="@+id/recipeDetailsTitleTabIngredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="16sp"
                android:background="@color/colorText"
                android:textColor="@color/colorBackground"
                android:textAlignment="center"
                android:text="@string/title_tab_ingredients"/>
            <TextView
                android:id="@+id/recipeDetailsTitleTabRecipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="16sp"
                android:textAlignment="center"
                android:text="@string/title_tab_realisation"/>
        </LinearLayout>
        <!--<android.support.design.widget.TabLayout
            android:id="@+id/recipeDetailsTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/recipeDetailsDescriptionContainer"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabTextColor="@color/colorText"
            app:tabSelectedTextColor="@color/colorBackground"
            app:tabIndicatorColor="@color/colorText"
            app:tabBackground="@drawable/tab_color_selector">
        </android.support.design.widget.TabLayout>
        <android.support.v4.view.ViewPager
            android:id="@+id/recipeDetailsViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@id/recipeDetailsDescriptionContainer">
        </android.support.v4.view.ViewPager>-->
    </RelativeLayout>
</ScrollView>